Обработка модуля Кратковременный сбой электроэнергии

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,44 @@
         Я-2 в Щитовой №51 (первый этаж) </string>
     <!--вентиляция String-->
 
+    <!--Кратковременный сбой электроэнергии String-->
+    <string name="powerFailureInstruction">
+        ИНСТРУКЦИЯ В СЛУЧАЕ КРАТКОВРЕМЕННОГО
+        СБОЯ ЭЛЕКТРОЭНЕРГИИ:
+        ГЛАВНЫЕ ЩИТОВЫЕ №54 - №47
+    </string>
+    <string name="powerFailureInstructionP1">
+        \t 1. Проверить щит ЩУ-1 в 54 электрощитовой
+    </string>
+    <string name="powerFailureInstructionP2">
+        \t 2. Пройти по кабинетам  на первом этаже и проверить в комнате
+            24 - (Я-11, Я-12)
+            25 - (Я-8, Я-9)
+            13 склад Михельсон - (В-3,В-4)
+            51 электрощитовая - (Я-2)
+            ВКЛЮЧИТЬ ВСЕ ПЕРЕЧИСЛЕННОЕ
+
+        В комнате 21 - вентиляция (П-1, П-2) и насосы включаются в холодное время или по просьбе руководства.
+    </string>
+    <string name="powerFailureInstructionP3">
+         \t 3. В подвале проверить работу насосов ГВС
+            В 65 теплопункте включить насосы.
+            В 66 комнате включить (В-17, В-16)
+    </string>
+    <string name="powerFailureInstructionP4">
+        \t 4. Пройти в цокольный этаж и включить вентиляцию в комнате
+            П-39 (П-5 и насос)
+            В техническом коридоре П-36 (В-18)
+    </string>
+    <string name="powerFailureInstructionAfterALl">
+        ЧЕРЕЗ 1 ЧАС ПОСЛЕ ВКЛЮЧЕНИЯ ВЫШЕИЗЛОЖЕННОГО
+        ПРОИЗВЕСТИ ОБХОД ЗДАНИЯ
+    </string>
+    <string name="powerFailureInstructionPhone">
+        «В СЛУЧАЕ ОСЛОЖНЕНИЙ ЗВОНИТЬ ВЕДУЩЕМУ ЭНЕРГЕТИКУ
+        ДАНИЛКИНУ А.Д. 8-968-653-67-76 </string>
+    <!--Кратковременный сбой электроэнергии String-->
+
     <!--вентиляция String-Array-->
     <string-array name="systemName">
         <item>Обозначение системы</item>
